-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8362043 | 25.0.1 | Ashutosh Mehra | P3 | Resolved | Fixed | b02 |
| JDK-8361280 | 25 | Ashutosh Mehra | P3 | Resolved | Fixed | b30 |
AOTCodeAddressTable::_stubs_addr is not initialized to nullptr in the constructor, and it is not freed in the destructor.
- backported by
-
JDK-8361280 AOTCodeAddressTable::_stubs_addr not initialized/freed properly
-
- Resolved
-
-
JDK-8362043 AOTCodeAddressTable::_stubs_addr not initialized/freed properly
-
- Resolved
-
- caused by
-
JDK-8354887 Preserve runtime blobs in AOT code cache
-
- Resolved
-
- links to
-
Commit(jdk25)
openjdk/jdk/ab013962
-
Commit(master)
openjdk/jdk/3066a67e
-
Review(jdk25)
openjdk/jdk/26095
-
Review(master)
openjdk/jdk/26053
(2 links to)