8361101: AOTCodeAddressTable::_stubs_addr not initialized/freed properly

Reviewed-by: shade
Backport-of: 3066a67e6279f7e3896ab545bc6c291d279d2b03